# oc-credential

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  README.md  acinclude.m4  configure.ac
em-setting/: Makefile.am  emsize_main.c  library_type_size.js.in  type-size-func-body-doc.txt  type-size-func-body.js.in  type-size.js.in
include/: config.h.in
mac/: about-dyld.txt
pkg/: Makefile.am  install.txt
pkg/win/: .gitignore  ActionText.idt  AdminUISequence.idt  Binary.idt  CheckBox.idt  Component-i386.idt.in  Component-x86_64.idt.in  Component.idt.in  Control.idt  ControlEvent.idt  Dialog.idt  Directory.idt  Environment.idt  EventMapping.idt  Feature.idt  FeatureComponents-x86_64.idt.in  FeatureComponents.idt  File-i386.idt.in  File-x86_64.idt.in  File.idt.in  InstallExecuteSequence.idt  InstallUISequence.idt  Makefile.am  Media-Streamed.idt  Media.idt  MsiEmbeddedUI.idt  MsiSFCBypass.idt  Property.idt.in  PublishComponent.idt  Schema.Msi  TextStyle.idt  UIText.idt  cabddf_main.c  cabeng_main.c  cabhash_main.c  cmpfl-gen.sh  depends-dll.sh  dir.c  dir.h  dir_i.h  (+17 more)
pkg/win/Binary/: .gitattributes
pkg/win/code-sign/: MsiDigitalCertificate.idt  MsiDigitalSignature.idt
pkg/win/ja/: Control.idt  Error.idt  Makefile.am  Property.idt.in  UIText.idt
pkg/win/table_idt_0/: Component.idt  Control.idt  Directory.idt  File.idt  MsiShortcutProperty.idt  _SummaryInformation.idt  _Validation.idt
pkg/win/tables/: CustomAction.idt  MsiEmbeddedChainer.idt  MsiLockPermissionsEx.idt  MsiPackageCertificate.idt  MsiServiceConfig.idt  MsiServiceConfigFailureActions.idt  Shortcut.idt
pkg/win/tmp/: Schema.Msi  a1.txt  a2.txt
pkg/win/ui/: ui-ja.msi  ui.msi
pkg/win/ui/ja-tables/: Control.idt
pkg/win/ui/tables/: Binary.idt  Control.idt  ControlCondition.idt  ControlEvent.idt  Dialog.idt  InstallExecuteSequence.idt  InstallUISequence.idt  Property.idt  RadioButton.idt
po/: .gitignore  ChangeLog  Makefile.in.in  POTFILES.in  ja.po
rc/: rc.json
resource/: Makefile.am  icns-gen.sh
src/: Makefile.am
src/config/: .gitignore  Makefile.am
src/core/: Makefile.am  app_config.c  app_config.h  app_config_i.h  credential.c  credential.h  credential_desc.gpf  credential_desc.h  credential_i.c  credential_i.h  credential_storage.h  credential_storage_sqlite.c  decl.d.ts.in  exported-functions.utf-8  library_core.js  package.json.in  runtime-methods.utf-8  std_io_ex.h  std_io_ex_posix.c  std_io_ex_win.c  str_conv.h  str_conv_win.c  t0_credential_desc.c  t0_credential_desc.sh.in  t0_str_conv_win.c  user_resource.c  user_resource.h  user_resource_const.h.in  user_resource_i.c  user_resource_linux.c  user_resource_posix.c  user_resource_win.c  uuid_i.h  uuid_i_posix.c  uuid_i_win.c  wasm_i.h
src/credential-helper/: Makefile.am  client_id.gpf.in  client_secret.gpf.in  client_secret.h  create-git-credential-input.awk  create-git-credential-input.sh  cred_default.c  cred_helper.c  cred_helper.h  cred_helper_i.c  cred_helper_i.h  cred_helper_op.c  cred_helper_op.h  cred_helper_parser.c  cred_helper_parser.h  cred_helper_types.h  credential_op.h  credential_storage.c  credential_storage_key_id_table.gpf  credential_storage_key_id_table.h  credhelper_const.h.in  credhelper_res.rc  credhelper_res.rc.in  credhelper_ver_en.rc  credhelper_ver_ja.rc  dbg.c  dbg.h  exe_info.h  exe_info_darwin.c  exe_info_linux.c  exe_info_win.c  exec_names.c.in  exec_names.h  fd_io.c  fd_io.h  fd_io_win.c  fd_io_win.h  file_desc.c  file_desc.h  gpf_names_replace.awk  (+122 more)
src/lmdcli/: Makefile.am  app_config.c  app_config.h  app_config_i.c.in  client_id.gpf.in  client_id.h  client_id.in.c  client_secret.gpf.in  client_secret.h  client_secret.in.c  credential.c  credential_desc.gpf  credential_desc.h  credential_i.c  credential_i.h  credential_storage.h  credential_storage_sqlite.c  exe_info_linux.c  http.h  l10n.h  lmd.c  lmd.h  lmd_connections.c  lmd_connections.h  lmd_credential_op.c  lmd_credential_op.h  lmd_i.c  lmd_i.h  lmd_parser.c  lmd_requests.c  lmd_ver_en.rc  main.c  option.h  rt_get_01.sh.in  t_erase_01.sh  t_erase_02.sh  t_site_01.sh.in  t_store_01.sh  user_resource.c  user_resource.h  (+1 more)
src/scripts/: Makefile.am  credential-oc.sh.in
src/ui/: Makefile.am  copy-dylib-for-ui.sh  dep-list.mjs  dll-entry.txt  dylib-entry.txt  dylib-search-path.txt  electron-package.json.in  key-values-to-json-1.awk  package-lock.json  package.json.in  rebranding-win.pl  rebranding-win.rc  rebranding.rb  resolve-dylib.sh  resolve-node-module.sh  rollup.config.electron.js.in  rollup.config.electron.mjs.in  rpath-info.sh  tsconfig.electron.json.in  tsconfig.json.in  ui_const.h.in  url-service-json.awk  vite.config.ts.in
src/ui/client/: index.html
src/ui/client/src/: option.ts
src/ui/client/src/components/: Oauth.vue
src/ui/client/src/io/: codec.ts  index.ts  oauth.ts
src/ui/common/src/common/: descriptor.ts  index.ts
src/ui/config/: app.json.in
src/ui/electron/src/: c-string.ts  common-types.ts  config-tmpl.json  config.ts  credential-ui.ts  credential.ts  desc.ts  intl-common.ts  intl-darwin.ts  intl-posix.ts  intl-type.ts  intl-win.ts  intl.ts  ipc.ts  library-path-darwin.ts  library-path.ts  locale-common.ts  locale-const.ts  locale-darwin.ts  locale-dbg-1.ts  locale-orig.ts  locale-posix.ts  locale-type.ts  locale-win.ts  locale.ts  main.ts  menu-darwin.ts  menu-linux.ts  menu-util.ts  menu-win.ts  menu.ts  option.ts  preload.ts  proxy.ts
src/ui/intl/: Makefile.am  catalog-dep.sh  catalog-map.txt  catalogs-depends.mk  catalogs-vars.mk  setup-mk-files.sh  ui-menu.pot
src/ui/intl/ja/: ui-menu.po
ui/: Makefile.am  index.html  main.js  package-lock.json  package.json  rollup.config.electron.js  rollup.config.electron.js.in  tsconfig.electron.json.in  tsconfig.json  vite.config.ts  vite.config.ts.in
ui/client/src/: main.ts
ui/client/src/components/: Oauth.vue
ui/electron/: tsconfig.json
ui/electron/src/: credential-ui.ts  credential.ts  desc.ts  ipc.ts  main.ts  option.ts  preload.ts
ui/electron/src/io/: oauth.ts
ui/src/: App.vue
ui/src/components/: Message.vue  Oauth.vue
url/: url.csv
(+14 files in other folders)
